<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">趣友</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="input_phone_num">请输入手机号</string>
    <string name="next_step">下一步</string>
    <string name="inupt_user_name">请输入昵称</string>
    <string name="inupt_telephone">请输入手机号码</string>
    <string name="inupt_password">请输入密码</string>
    <string name="inupt_again_password">请再一次输入密码</string>
    <string name="take_photo">拍照</string>
    <string name="from_photo_album">从相册选择</string>
    <string name="finished">完成</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_create_circle">CreateCircleActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="is_delete">是否删除这张照片？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="loading">加载中...</string>
    <string name="pull_refresh">下拉刷新</string>
    <string name="last_refresh">上次更新</string>
    <string name="loading_more">加载更多</string>

    <!-- 环信 -->

    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">S</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="title_activity_category_circle">CategoryCircleActivity</string>
    <string name="title_activity_search_circls">SearchCirclsActivity</string>
    <string name="title_activity_circle_info">CircleInfoActivity</string>
    <string name="title_activity_circle_member_info">CircleMemberInfoActivity</string>
    <string name="title_activity_welcom">WelcomActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_publish_video">PublishVideoActivity</string>
    <string name="title_activity_near_circles">NearCirclesActivity</string>
    <string name="title_activity_chat_all_history">ChatAllHistoryActivity</string>
    <string name="title_activity_update_user_info">UpdateUserInfoActivity</string>
    <string name="title_activity_circle_member">CircleMemberActivity</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_video_comment">VideoCommentActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_find_password">FindPasswordActivity</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="title_activity_message_warnctivity">MessageWarnctivity</string>
    <string name="title_activity_qu_you_wain">QuYouWainActivity</string>
    <string name="title_activity_receive_join_circle">ReceiveJoinCircleActivity</string>
    <string name="title_activity_refuse_join_circle">RefuseJoinCircleActivity</string>
    <string name="title_activity_dissolve_circle">DissolveCircleActivity</string>
    <string name="title_activity_update_circle_discription">UpdateCircleDiscriptionActivity</string>
    <string name="title_activity_praise_and_comment">PraiseAndCommentActivity</string>
    <string name="title_activity_welcom_loading">WelcomLoadingActivity</string>
    <string name="title_activity_kick_out">KickOutActivity</string>

    <!-- 日期 -->
    <string name="done_label">Done</string>
    <string name="day_picker_description">Month grid of days</string>
    <string name="year_picker_description">Year list</string>
    <string name="select_day">Select month and day</string>
    <string name="select_year">Select year</string>
    <string name="item_is_selected">%1$s selected</string>
    <string name="sans_serif" translatable="false">sans-serif</string>
    <string name="day_of_week_label_typeface" translatable="false">sans-serif</string>
    <string name="time_placeholder" translatable="false">--</string>
    <string name="time_separator" translatable="false">:</string>

    <!-- Accessibility announcement when a number that had been typed in is deleted [CHAR_LIMIT=NONE] -->
    <string name="deleted_key"><xliff:g id="key" example="4">%1$s</xliff:g> deleted</string>
    <!--
         Content description for the hour selector in the time picker, which displays
         selectable hours of the day along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="hour_picker_description">Hours circular slider</string>
    <!--
         Content description for the minute selector in the time picker, which displays
         selectable five-minute intervals along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="minute_picker_description">Minutes circular slider</string>
    <string name="radial_numbers_typeface" translatable="false">sans-serif</string>
    <string name="select_hours">Select hours</string>
    <string name="select_minutes">Select minutes</string>
    <string name="done_label" msgid="7007948707597430919">"完成"</string>
    <string name="hour_picker_description" msgid="7586639618712934060">"小时转盘"</string>
    <string name="minute_picker_description" msgid="6024811202872705251">"分钟转盘"</string>
    <string name="select_hours" msgid="7651068754188418859">"选择小时"</string>
    <string name="select_minutes" msgid="8327182090226828481">"选择分钟"</string>
    <string name="day_picker_description" msgid="3968620852217927702">"按月份划分的日期网格"</string>
    <string name="year_picker_description" msgid="6963340404644587098">"年份列表"</string>
    <string name="select_day" msgid="3973338219107019769">"选择月份和日期"</string>
    <string name="select_year" msgid="2603330600102539372">"选择年份"</string>
    <string name="item_is_selected" msgid="2674929164900463786">"已选择 <xliff:g id="ITEM">%1$s</xliff:g>"</string>
    <string name="deleted_key" msgid="6908431551612331381">"已删除 <xliff:g id="KEY">%1$s</xliff:g>"</string>

</resources>