<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialogContent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/scale69dip"
        android:layout_marginTop="@dimen/scale83dip"
        android:gravity="center"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:text="@string/is_delete"
        android:textColor="#5c5c5c"
        android:textSize="17sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:src="#37a6af" />

    <LinearLayout
        android:id="@+id/layButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e8e6e7" >

        <Button
            android:id="@+id/btnCancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:paddingBottom="@dimen/scale28dip"
            android:paddingTop="@dimen/scale28dip"
            android:text="@string/no"
            android:textColor="#8b8b8b"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="1dip"
            android:layout_height="50dip"
            android:src="#bebebe" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:paddingBottom="@dimen/scale28dip"
            android:paddingTop="@dimen/scale28dip"
            android:text="@string/yes"
            android:textColor="#37a6af"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>